[gd_scene load_steps=7 format=3 uid="uid://j7eb2cgdfiyg"]

[ext_resource type="Script" path="res://scenes/Player.gd" id="1_bdvmp"]
[ext_resource type="PackedScene" uid="uid://bf01xr5ocajub" path="res://Models/Jet.glb" id="1_bftd6"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_7yvxd"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_iyn5v"]
sky_material = SubResource("ProceduralSkyMaterial_7yvxd")

[sub_resource type="Environment" id="Environment_2i4in"]
background_mode = 2
sky = SubResource("Sky_iyn5v")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxShape3D" id="BoxShape3D_cyk4r"]
size = Vector3(1.8163, 0.195557, 1.94562)

[node name="Player" type="Node3D"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_2i4in")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="CharacterBody3D" type="CharacterBody3D" parent="."]
script = ExtResource("1_bdvmp")

[node name="JetModel" parent="CharacterBody3D" instance=ExtResource("1_bftd6")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D"]
transform = Transform3D(1, -0.000144896, -0.000780558, 0.000144524, 1, -0.000507988, 0.000780627, 0.000507882, 1, -0.0343857, 0.0189209, 0.0611877)
shape = SubResource("BoxShape3D_cyk4r")

[node name="RollTimer" type="Timer" parent="CharacterBody3D"]
process_callback = 0
wait_time = 0.5

[node name="RollCooldown" type="Timer" parent="CharacterBody3D"]
wait_time = 0.5
one_shot = true
autostart = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, 1.87727e-08, -8.53834e-08, 0, 0.976672, 0.214735, 8.74228e-08, 0.214735, -0.976672, 0, 0.789, -2.40928)

[connection signal="timeout" from="CharacterBody3D/RollTimer" to="CharacterBody3D" method="_on_roll_timer_timeout"]
